--- a/index.html
+++ b/index.html
@@ -3,10 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex, nofollow" />
-    <title>Unindexed Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coming Soon | easeebuy.net</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #fff;
+      }
+      .container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        min-height: 100vh;
+        background: url("./bg.svg");
+        text-align: center;
+        background-size: cover;
+      }
+      .bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        min-height: 100vh;
+        z-index: -1;
+      }
+      article {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      .logo {
+        margin-bottom: 20px;
+        max-width: 200px;
+      }
+      .message {
+        font-size: 20px;
+        line-height: 1.5;
+        margin: 0;
+        color: #fff;
+        font-weight: bold;
+      }
+    </style>
   </head>
   <body>
-    <h1>This page is not intended for public search engines.</h1>
-    <p>This content is for private purposes only.</p>
+    <div class="container">
+      <article class="wrapper">
+        <img class="logo" src="./easeebuy-logo.png" alt="easeebuy logo" />
+        <p class="message">
+          Our site is under construction, we'll be back soon with something
+          amazing! <br />Keep an eye out for updates!.
+        </p>
+      </article>
+    </div>
   </body>
 </html>
